gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail267.d
version https://git-lfs.github.com/spec/v1
oid sha256:539b37a76316c77fd95f6709c5bfb6064ce3caef008d22cf36b62f898dc192ad
size 181
